// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto3";

import "oaa/av/AVChannelSetupStatusEnum.proto";

package oaa.proto.messages;

message AVChannelSetupResponse
{
    optional enums.AVChannelSetupStatus.Enum media_status = 1;
    optional uint32 max_unacked = 2;
    repeated uint32 configs = 3;
}
