// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto2";

package oaa.proto.messages;

import "oaa/av/AVChannelMediaConfigMessage.proto";
import "oaa/av/AVChannelSessionTypeEnum.proto";

// APK class: wce â€” AV channel start (4 fields)
message AVChannelStartIndication
{
    optional int32 session = 1;
    optional uint32 config = 2;
    optional enums.AVChannelSessionType.Enum session_type = 3;  // APK: d (enum via vvs.n/a.bq)
    optional AVChannelMediaConfig media_config = 4;  // APK: vyo (AVChannelMediaConfig)
}
