// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto3";

import "oaa/bluetooth/BluetoothPairingMethodEnum.proto";

package oaa.proto.messages;

message BluetoothPairingRequest
{
    optional string phone_address = 1;
    optional enums.BluetoothPairingMethod.Enum pairing_method = 2;

    // Discovered via APK proto decoder (kay.java, AA v16.1)
    optional string phone_name = 3;  // Human-readable phone name
}
