// Android Auto Protocol Buffer Definitions
// https://github.com/mrmees/open-android-auto
// SPDX-License-Identifier: GPL-3.0-or-later

syntax="proto2";

import "oaa/bluetooth/BluetoothPairingStatusEnum.proto";

package oaa.proto.messages;

// APK class: xgq â€” 3 fields
// Field 3 is "repeated packed enum" per APK descriptor, sharing the same
// enum verifier (wck.u) as field 2 (BluetoothPairingStatus).
message BluetoothPairingResponse
{
    optional bool already_paired = 1;
    optional enums.BluetoothPairingStatus.Enum status = 2;
    repeated enums.BluetoothPairingStatus.Enum error_codes = 3 [packed = true];
}
