// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto2";

import "oaa/input/TouchEventData.proto";
import "oaa/input/ButtonEventsData.proto";
import "oaa/input/AbsoluteInputEventsData.proto";
import "oaa/input/RelativeInputEventsData.proto";

package oaa.proto.messages;

// APK class: vxx — no field 2 (disp_channel)
message InputEventIndication
{
    optional uint64 timestamp = 1;
    optional data.TouchEvent touch_event = 3;
    optional data.ButtonEvents button_event = 4;
    optional data.AbsoluteInputEvents absolute_input_event = 5;
    optional data.RelativeInputEvents relative_input_event = 6;

    // Discovered via APK proto decoder (vxx.java, AA v16.1)
    // Second touch event — possibly for multi-display (cluster) input
    optional data.TouchEvent secondary_touch_event = 7;
}

// APK class: vvh (proto2) — single absolute input event coordinate
message AbsInputEvent {
    required uint32 axis = 1;    // APK: uint32 (type_id=11), required
    required int32 value = 2;    // APK: int32 (type_id=4), required
}

// APK class: vvi (proto2) — collection of absolute input events
message AbsoluteEvent {
    repeated AbsInputEvent events = 1;   // APK: repeated message (type_id=27)
}
